packages/website/versioned_docs/version-0.1.x/changelog.md
---
id: changelog 
title: Changelog 
---

### v0.1.0 - Released on 2019/10/28

- Changes: pause scrolling on touch
- Fix: click action stop scrolling while Swiper is scrolling

### v0.0.6 - Released on 2019/10/17

- Fix: `removeClassName` and `addClassName`

### v0.0.5 - Released on 2019/10/17

- Add Swiper parameter `touchAngle`
- Add Swiper parameter `touchMoveStopPropagation`

### v0.0.4 - Released on 2019/10/16

- Add: simulate touch on desktop device

### v0.0.3 - Released on 2019/10/16

- Add: `intermittent` parameter
- Add: `pagination.clickable` configuration
- Add: demo site https://joe223.com/tiny-swiper
- Changes: default timing function

### v0.0.2 - Released on 2019/10/15

- Add Swiper parameters `longSwipesMs`
- Add Swiper parameters `touchRatio`
- Add Swiper parameters `passiveListeners`
- Add Swiper parameters `resistance`
- Add Swiper parameters `resistanceRatio`
