packages/website/versioned_docs/version-1.x/changelog.md
---
id: changelog
title: Changelog
---
### v1.3.3 - Released on 2020/12/9

- Fix: #36 SwiperPluginKeyboardControl exported incorrectly

### v1.3.2 - Released on 2020/12/1

- Fix: #29 Invert mousewheel.

### v1.3.1 - Released on 2020/10/30

- Fix: #27 Calculating the total of pagination bullet with slidesPerView.

### v1.3.0 - Released on 2019/12/30

- Add: `slidesPerView` parameter
- Add: `centeredSlides` parameter
- Add: SwiperPluginKeyboardControl
- Fix: Unexpected slide width (#14)
- Fix: transform boundary

### v1.2.0 - Released on 2019/12/16

- Add: export ESM and full-featured file

### v1.1.0 - Released on 2019/12/9

- Add: `SwiperPluginLazyload` plugin
- Add: use method

### v1.0.2 - Released on 2019/11/18

- Add: excludeElements configuration
- Changes: update resistance calculate
- Changes: optimize package size

### v1.0.1 - Released on 2019/11/12

- Fix: SwiperPluginPagination plugin name

### v1.0.0 - Released on 2019/11/11

- **Breaking Change**: extract pagination plugin
- Add: destory method
- Add: life hooks

### v0.1.0 - Released on 2019/10/28

- Changes: pause scrolling on touch
- Fix: click action stop scrolling while Swiper is scrolling

### v0.0.6 - Released on 2019/10/17

- Fix: `removeClassName` and `addClassName`

### v0.0.5 - Released on 2019/10/17

- Add Swiper parameter `touchAngle`
- Add Swiper parameter `touchMoveStopPropagation`

### v0.0.4 - Released on 2019/10/16

- Add: simulate touch on desktop device

### v0.0.3 - Released on 2019/10/16

- Add: `intermittent` parameter
- Add: `pagination.clickable` configuration
- Add: demo site https://joe223.com/tiny-swiper
- Changes: default timing function

### v0.0.2 - Released on 2019/10/15

- Add Swiper parameters `longSwipesMs`
- Add Swiper parameters `touchRatio`
- Add Swiper parameters `passiveListeners`
- Add Swiper parameters `resistance`
- Add Swiper parameters `resistanceRatio`
